# fastMCD

./: CMakeLists.txt  KLTWrapper.py  MCDWrapper.py  ProbModel.py  README.md  main.py  point2D.py
python/: KLTWrapper.py  MCDWrapper.py  ProbModel.py  main.py
src/: KLTWrapper.cpp  KLTWrapper.hpp  MCDWrapper.cpp  MCDWrapper.hpp  main.cpp  main.hpp  params.hpp  prob_model.hpp
